# cli

./: .dockerignore  .gitignore  .gitmodules  .goreleaser.yaml  .mcp.json  .sops.yaml  CLAUDE.md  CONSOLIDATION_CHANGES.md  CONSOLIDATION_INDEX.md  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  DOCKER_REORGANIZATION_REPORT.md  LICENSE  Makefile  README.md  README.md.tmpl  RENAME_REFACTORING_REPORT.md  REORGANIZATION_REPORT.md  SESSIONS_FINDINGS.txt  SESSIONS_QUICK_REFERENCE.md  SESSIONS_REFACTOR_REPORT.md  SESSIONS_SNIPPETS.md  cli-reference.txt.tmpl  content_plan.md  example.html  go.mod  go.sum  go.work  go.work.sum  install.ps1  install.sh  live-pulse.html  llms-full.txt  llms-full.txt.tmpl  llms-install.md  llms.txt  llms.txt.tmpl  machine-dreams.html  package-lock.json  package.json  (+5 more)
stage-runtime-rust/: Cargo.toml  Dockerfile  Makefile
stage-runtime-rust/benches/: htmlcss_bench.rs
stage-runtime-rust/docs/: cdp-extensions.md
stage-runtime-rust/proptest-regressions/webgl2/: shader.txt
stage-runtime-rust/src/: lib.rs
stage-runtime-rust/src/canvas2d/: context.rs  path.rs
stage-runtime-rust/src/cdp/: mod.rs
stage-runtime-rust/src/compositor/: mod.rs
stage-runtime-rust/src/content/: loader.rs  mod.rs
stage-runtime-rust/src/encoder/: mod.rs
stage-runtime-rust/src/htmlcss/: dom.rs  incremental.rs
stage-runtime-rust/src/storage/: mod.rs
stage-runtime-rust/src/webgl2/: context.rs  shader.rs  state.rs  webgl2.js
stage-runtime-rust/tests/: adversarial_review2_test.proptest-regressions  audio_e2e_test.rs  audio_offline_test.rs  audio_reference_test.rs  canvas2d_basic_test.rs  canvas2d_event_test.rs  context_fuzz_test.rs  encoder_test.rs  highvalue_prop_test.rs  hotpath_prop_test.rs  htmlcss_mixed_test.rs  htmlcss_reference_test.rs  naga_debug.rs  phase2_red_green_test.rs  shader_fuzz_test.rs  webgl2_shader_test.rs
stage-runtime-rust/tests/audio_fixtures/: generate_reference.cjs
stage-runtime-rust/tests/htmlcss_fixtures/: css_layout.html
stage-runtime-rust/tests/webgl2_fixtures/: .gitignore  bench_chrome.cjs  bench_chrome_results.json  generate.cjs  generate_bench_scenes.py
stage-runtime-rust/tests/webgl2_fixtures/shaders/: fs_color3.glsl  fs_phong.glsl  fs_solid_sky.glsl  fs_solid_teal.glsl  fs_solid_white.glsl  fs_textured.glsl  fs_two_textures.glsl  vs_pos2d_alpha.glsl  vs_pos2d_uv.glsl  (+4 more)
(+1744 files in other folders)
